--- a/configure.in
+++ b/configure.in
@@ -58,9 +58,9 @@ AC_PATH_PROG(MOC, moc, , $PATH:$QTDIR/bin)
 if test -z "$MOC" ; then
     AC_MSG_ERROR([Cannot find 'moc'])
 fi
-AC_PATH_PROG(UIC, uic3, , $PATH:$QTDIR/bin)
+AC_PATH_PROG(UIC, uic, , $PATH:$QTDIR/bin)
 if test -z "$UIC" ; then
-    AC_MSG_ERROR([Cannot find 'uic3'])
+    AC_MSG_ERROR([Cannot find 'uic'])
 fi
 
 CXXFLAGS="$CXXFLAGS $QT4_CFLAGS"
