Replace sound code with ALSA support from qGo2
The wavplay/wavfile code wasn't working at all for me, so replace it
with C++ code from qGo2. This doesn't always seem to play sounds reliably,
but I suppose that'll be fixable. Later.

--- a/configure.in
+++ b/configure.in
@@ -37,6 +37,8 @@ CXXFLAGS="$NOOPT_CXXFLAGS" dnl __kdevelop[noopt]__
 CFLAGS="$NOOPT_CFLAGS" dnl __kdevelop[noopt]__
 dnl CXXFLAGS="$CXXFLAGS $USE_EXCEPTIONS" dnl __kdevelop[exc]__
 
+AC_CHECK_LIB(asound,snd_pcm_info)
+
 AC_ENABLE_SHARED(yes)
 AC_ENABLE_STATIC(no)
 KDE_PROG_LIBTOOL
