Fix up icons and some other breakage after the .ui conversion
Icons now go into .qrc files. Also, it turns out that the edit tools
were dependent on the order the buttons are declared in the .ui file.
While there, fix up the next-move-color button to behave slightly more
sanely.

--- a/configure.in
+++ b/configure.in
@@ -64,6 +64,10 @@ AC_PATH_PROG(UIC, uic, , $PATH:$QTDIR/bin)
 if test -z "$UIC" ; then
     AC_MSG_ERROR([Cannot find 'uic'])
 fi
+AC_PATH_PROG(RCC, rcc, , $PATH:$QTDIR/bin)
+if test -z "$RCC" ; then
+    AC_MSG_ERROR([Cannot find 'rcc'])
+fi
 
 CXXFLAGS="$CXXFLAGS $QT4_CFLAGS"
 
