--- a/src/pics/Makefile.in
+++ b/src/pics/Makefile.in
@@ -136,6 +136,7 @@ PKG_CONFIG_PATH = @PKG_CONFIG_PATH@
 QT4_CFLAGS = @QT4_CFLAGS@
 QT4_LIBS = @QT4_LIBS@
 RANLIB = @RANLIB@
+RCC = @RCC@
 REPO = @REPO@
 SET_MAKE = @SET_MAKE@
 SHELL = @SHELL@
